Added tags-page, but figured out a better solution, so this is a saved backup in case i miss this version. WIP

--- a/src/LandingPages/dashboardPage/components/dashboardHeader/css/dashboardHeader.css
+++ b/src/LandingPages/dashboardPage/components/dashboardHeader/css/dashboardHeader.css
@@ -2,20 +2,22 @@
   display: flex;
   align-items: center;
   gap: 0.25rem;
-  margin-bottom: 2rem;
-}
-.dashboard-header > * {
-  transition: all 0.3s ease;
+  margin: 0 0 2rem 0;
 }
 .dashboard-header__title {
   padding: 0;
   line-height: 1;
   color: hsl(var(--muted-foreground));
   font-size: 1rem;
+  transition: all 0.3s ease;
+  margin: 0;
 }
 .dashboard-header__title:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+.dashboard-header .noSafariTitle {
+  transition: none !important;
 }
 .dashboard-header__slash {
   font-size: 2rem;
