--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,8 @@ html:root {
 }
 
 /* Dark mode */
-@media (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark),
+  screen and (-webkit-prefers-color-scheme: dark) {
   html:root {
     --sidebar-bg: 222.2 84% 4.9%;
     /* == Theme == */
