--- a/src/components/form/components/customInput/css/customInput.scss
+++ b/src/components/form/components/customInput/css/customInput.scss
@@ -31,7 +31,8 @@
   &:active {
     border-color: hsl(var(--input-hover));
 
-    @media screen and (prefers-color-scheme: dark) {
+    @media screen and (prefers-color-scheme: dark),
+      screen and (-webkit-prefers-color-scheme: dark) {
       border-color: hsl(var(--input-hover));
     }
   }
