--- a/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.css
+++ b/src/components/grid/gridContainer/gridComponents/gridSidebar/components/sidebarContentList/css/sidebarContentList.css
@@ -31,7 +31,7 @@
 .sidebar__content__item__link:hover {
   background-color: hsl(var(--sidebar-bg));
 }
-@media (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark), screen and (-webkit-prefers-color-scheme: dark) {
   .sidebar__content__item__link:hover {
     background-color: hsl(var(--muted)) !important;
   }
@@ -39,7 +39,7 @@
 .sidebar__content__item__link:hover svg {
   background-color: hsl(var(--sidebar-bg)) !important;
 }
-@media (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark), screen and (-webkit-prefers-color-scheme: dark) {
   .sidebar__content__item__link:hover svg {
     background-color: hsl(var(--muted)) !important;
   }
