--- a/src/components/ui/buttons/switch/switchButton.module.scss
+++ b/src/components/ui/buttons/switch/switchButton.module.scss
@@ -106,7 +106,8 @@
   }
 }
 
-@media screen and (prefers-color-scheme: light) {
+@media screen and (prefers-color-scheme: light),
+  screen and (-webkit-prefers-color-scheme: light) {
   .switch {
     background-color: hsl(var(--muted-foreground));
 
