--- a/src/components/ui/cards/draggableCard/css/revealCard.scss
+++ b/src/components/ui/cards/draggableCard/css/revealCard.scss
@@ -41,11 +41,15 @@
         text-wrap: balance;
         min-width: 0;
         user-select: text;
+        cursor: text;
       }
       p {
         font-size: 0.875rem;
         line-height: 1.25rem;
         color: hsl(var(--muted-foreground));
+        user-select: text;
+
+        cursor: text;
       }
     }
     &__badges {
@@ -53,6 +57,9 @@
       display: flex;
       gap: 0.5rem;
       flex-wrap: wrap;
+      user-select: text;
+
+      cursor: text;
     }
     &__content {
     }
@@ -117,6 +124,17 @@
     shape-rendering: geometricprecision;
     fill-rule: evenodd;
     clip-rule: evenodd;
+  }
+}
+
+.reveal-card-mobile {
+  cursor: pointer;
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:active {
+    cursor: pointer;
   }
 }
 
