--- a/src/LandingPages/dashboardPage/components/dashboardHeader/css/dashboardHeader.scss
+++ b/src/LandingPages/dashboardPage/components/dashboardHeader/css/dashboardHeader.scss
@@ -2,21 +2,24 @@
   display: flex;
   align-items: center;
   gap: 0.25rem;
-  margin-bottom: 2rem;
+  margin: 0 0 2rem 0;
 
-  > * {
-    transition: all 0.3s ease;
-  }
   &__title {
     padding: 0;
     line-height: 1;
     color: hsl(var(--muted-foreground));
     font-size: 1rem;
+    transition: all 0.3s ease;
+    margin: 0;
 
     &:hover {
       cursor: pointer;
       text-decoration: underline;
     }
+  }
+
+  .noSafariTitle {
+    transition: none !important;
   }
 
   &__slash {
