--- a/src/components/form/components/customInput/css/customInput.css
+++ b/src/components/form/components/customInput/css/customInput.css
@@ -36,7 +36,7 @@
 .custom-input:hover, .custom-input:focus, .custom-input:active {
   border-color: hsl(var(--input-hover));
 }
-@media screen and (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark), screen and (-webkit-prefers-color-scheme: dark) {
   .custom-input:hover, .custom-input:focus, .custom-input:active {
     border-color: hsl(var(--input-hover));
   }
