--- a/src/components/form/components/customTextArea/css/customTextArea.module.css
+++ b/src/components/form/components/customTextArea/css/customTextArea.module.css
@@ -39,7 +39,7 @@
 .customTextArea:hover, .customTextArea:focus, .customTextArea:active {
   border-color: hsl(var(--input-hover));
 }
-@media screen and (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark), screen and (-webkit-prefers-color-scheme: dark) {
   .customTextArea:hover, .customTextArea:focus, .customTextArea:active {
     border-color: hsl(var(--input-hover));
   }
