--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.scss
@@ -47,7 +47,8 @@
   }
 }
 
-@media screen and (prefers-color-scheme=dark) {
+@media screen and (prefers-color-scheme: dark),
+  screen and (-webkit-prefers-color-scheme: dark) {
   .grid-navbar {
     &__logo {
       &__logo {
