--- a/src/components/ui/toast/toast.css
+++ b/src/components/ui/toast/toast.css
@@ -62,7 +62,7 @@
   background-color: hsl(var(--card));
   color: hsl(var(--foreground));
 }
-@media screen and (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark), screen and (-webkit-prefers-color-scheme: dark) {
   .success {
     background-color: hsl(var(--muted));
   }
