--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
@@ -7,16 +7,18 @@
   padding: 1rem;
 
   gap: 32px;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: var(--nav-height);
   padding-top: calc(2rem + 4px);
   right: 0;
-  bottom: 0;
-  left: 0;
+  left: var(--sidebar-width);
+  height: calc(100dvh - var(--nav-height));
   padding-left: 2rem;
   overflow: auto;
   transition: transform 0.3s ease-in-out;
   transform: translateX(120%);
+  //max-height: 100dvh;
+  overflow: scroll !important; /* Adds a vertical scrollbar if content exceeds max-height */
 
   background-color: hsl(var(--card));
 
@@ -70,6 +72,12 @@
   }
 }
 
+.statusPriorityDueDateWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
 .backButton {
   border: 1px solid hsl(var(--border));
 }
@@ -106,6 +114,11 @@
 
 .info {
   margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
 }
 
 .status {
@@ -159,6 +172,7 @@
 }
 @media screen and (max-width: 768px) {
   .taskViewer {
+    left: 0;
     &::after {
       content: "";
       display: none;
