--- a/src/LandingPages/dashboardPage/components/showTaskModal/css/showTaskModal.module.css
+++ b/src/LandingPages/dashboardPage/components/showTaskModal/css/showTaskModal.module.css
@@ -1,5 +1,5 @@
 .fetchingTaskDiv {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
   position: fixed;
   top: 0;
   right: 0;
@@ -7,10 +7,11 @@
   left: var(--sidebar-width);
   z-index: 1000;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 .fetchingTaskDiv .loader {
+  margin-top: 150px;
   background-color: transparent !important;
 }
 .fetchingTaskDiv .loader > div {
@@ -24,6 +25,14 @@
   height: 2rem;
 }
 
+@media screen and (max-width: 768px) {
+  [data-nav-open=true] .fetchingTaskDiv {
+    left: var(--sidebar-width);
+  }
+  [data-nav-open=false] .fetchingTaskDiv {
+    left: 0;
+  }
+}
 @keyframes spinner {
   0% {
     transform: rotate(0deg);
