--- a/src/LandingPages/dashboardPage/components/showTaskModal/css/showTaskModal.module.scss
+++ b/src/LandingPages/dashboardPage/components/showTaskModal/css/showTaskModal.module.scss
@@ -1,5 +1,5 @@
 .fetchingTaskDiv {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
   position: fixed;
   top: 0;
   right: 0;
@@ -8,10 +8,11 @@
   z-index: 1000;
 
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 
   .loader {
+    margin-top: 150px;
     background-color: transparent !important;
     > div {
       background-color: transparent !important;
@@ -25,6 +26,19 @@
 
     width: 2rem;
     height: 2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  [data-nav-open="true"] {
+    .fetchingTaskDiv {
+      left: var(--sidebar-width);
+    }
+  }
+  [data-nav-open="false"] {
+    .fetchingTaskDiv {
+      left: 0;
+    }
   }
 }
 
