--- a/src/LandingPages/dashboardPage/components/taskboard/components/FilterTasksWrapper/filtering.module.scss
+++ b/src/LandingPages/dashboardPage/components/taskboard/components/FilterTasksWrapper/filtering.module.scss
@@ -11,7 +11,7 @@
 
     li {
       list-style-type: none;
-      font-size: 0.875rem;
+      font-size: 0.8rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -28,6 +28,11 @@
     outline-color: transparent;
     color: hsl(var(--white));
     background-color: hsl(var(--primary));
+
+    svg {
+      width: 0.875rem;
+      height: 0.875rem;
+    }
 
     &:hover {
       background-color: hsl(var(--primary) / 0.75);
