--- a/src/LandingPages/dashboardPage/components/taskboard/css/draggableColumn.module.css
+++ b/src/LandingPages/dashboardPage/components/taskboard/css/draggableColumn.module.css
@@ -3,7 +3,7 @@
   padding: 1.2rem 1.2rem 2rem;
   list-style-type: none;
   background-color: hsl(var(--card));
-  height: fit-content;
+  height: 100%;
 
   border: 1px solid hsl(var(--border));
   border-radius: calc(var(--radius) + 2px * 2);
@@ -20,7 +20,8 @@
 }
 
 .header .headerTitle {
-  font-size: 1rem;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .header .headerButtons {
@@ -44,13 +45,13 @@
   fill: none;
   cursor: grab;
 
-  width: 1.2rem;
-  height: 1.2rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 .header .headerButtons .editColumn {
-  width: calc(1.2rem + 4px);
-  height: calc(1.2rem + 4px);
+  width: calc(1rem + 4px);
+  height: calc(1rem + 4px);
   background-color: transparent;
   padding: 2px;
   pointer-events: all;
