--- a/src/components/createTodo/components/createTodoButton/css/createTodoButton.module.scss
+++ b/src/components/createTodo/components/createTodoButton/css/createTodoButton.module.scss
@@ -1,5 +1,5 @@
 .createTodoButton {
-  font-size: 0.875rem;
+  font-size: 0.8rem;
   background: hsl(var(--primary)) !important;
   display: flex;
   align-items: center;
@@ -7,8 +7,8 @@
   gap: 5px;
   color: hsl(var(--white)) !important;
   svg {
-    width: 20px;
-    height: 20px;
+    width: 0.875rem;
+    height: 0.875rem;
     display: flex;
     align-items: center;
     justify-content: center;
