--- a/src/components/ui/cards/draggableCard/css/revealCard.css
+++ b/src/components/ui/cards/draggableCard/css/revealCard.css
@@ -28,14 +28,17 @@
 }
 .reveal-card__wrapper {
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
 }
 .reveal-card__wrapper__header {
   overflow: hidden;
 }
 .reveal-card__wrapper__header h3 {
-  font-weight: 500;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 1rem;
   -webkit-hyphens: auto;
           hyphens: auto;
   text-wrap: balance;
