--- a/src/components/ui/cards/taskCard/css/taskCard.scss
+++ b/src/components/ui/cards/taskCard/css/taskCard.scss
@@ -32,7 +32,7 @@
         user-select: text;
       }
       p {
-        font-size: 13px;
+        font-size: 0.875rem;
         line-height: 1.25rem;
         color: hsl(var(--muted-foreground));
         line-height: 0.875;
@@ -57,6 +57,15 @@
     top: 50%;
     right: 1.5rem;
     transform: translateY(-50%);
+  }
+
+  &__date {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    font-size: 12px;
+
+    color: hsl(var(--muted-foreground));
   }
 }
 
@@ -84,4 +93,8 @@
       }
     }
   }
+}
+
+.clickable {
+  cursor: pointer !important;
 }
