Added tags, added search, better taskViewer handling etx V2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,15 @@ html {
     --sidebar-width: calc(1.2rem + 3.5rem);
   }
 }
+
+.modal-root {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  z-index: 10000000;
+  user-select: none;
+  pointer-events: none;
+}
