--- a/src/components/grid/gridContainer/gridComponents/gridSidebar/css/gridSidebar.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridSidebar/css/gridSidebar.scss
@@ -82,7 +82,7 @@
       opacity: 1;
       transform: translate(0);
       background-color: hsl(var(--background));
-      z-index: 100;
+      z-index: 100000000000000000;
       position: fixed;
       top: 0;
       bottom: 0;
