--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.css
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.css
@@ -22,6 +22,7 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
   visibility: none;
   display: none;
+  z-index: 1000;
 }
 .taskViewer .topCTAwrapper {
   display: flex;
@@ -44,6 +45,20 @@
 .taskViewer .bottomButtons .delete {
   background-color: hsl(var(--destructive));
   text: hsl(var(--destructive-foreground));
+}
+.taskViewer .customSelect {
+  font-size: 1rem;
+  line-height: 1.25rem;
+  padding: 6px 12px;
+  height: 45px;
+  font-family: inherit;
+  background-color: hsl(var(--card));
+  border: 1px solid hsl(var(--input));
+  outline: none;
+  border-radius: calc(var(--radius) - 2px);
+  color: hsl(var(--foreground));
+  margin: 0;
+  transition: border-color 0.15s ease-in-out;
 }
 .taskViewer .titleInput {
   border-left: none;
