--- a/src/LandingPages/dashboardPage/components/showTaskModal/css/showTaskModal.module.css
+++ b/src/LandingPages/dashboardPage/components/showTaskModal/css/showTaskModal.module.css
@@ -1,7 +1,7 @@
 .fetchingTaskDiv {
   background-color: rgba(0, 0, 0, 0.25);
   position: fixed;
-  top: 0;
+  top: var(--nav-height);
   right: 0;
   bottom: 0;
   left: var(--sidebar-width);
