--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/components/taskSearchResponse/css/taskSearchResponse.module.css
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/components/taskSearchResponse/css/taskSearchResponse.module.css
@@ -1,3 +1,19 @@
+@media screen and (min-width: 769px) {
+  [data-sidebar-open=true] .taskSection {
+    --sidebar-width: 11rem;
+  }
+  [data-sidebar-open=false] .taskSection {
+    --sidebar-width: calc(1.2rem + 3.5rem);
+  }
+}
+@media screen and (max-width: 768px) {
+  [data-nav-open=true] .taskSection {
+    --sidebar-width: 15rem;
+  }
+  [data-nav-open=false] .taskSection {
+    --sidebar-width: 0;
+  }
+}
 .taskSection {
   position: fixed;
   top: var(--nav-height);
@@ -9,8 +25,8 @@
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   max-height: 100vh;
-  overflow: auto;
-  z-index: -1000000000000;
+  overflow: hidden;
+  z-index: 100;
 }
 .taskSection .header {
   margin-bottom: 1.5rem;
@@ -30,7 +46,7 @@
   font-size: 12px;
   margin-left: 0.5rem;
   background-color: hsl(var(--primary));
-  color: hsl(var(--black));
+  color: hsl(var(--white));
   border: 1px solid hsl(var(--border));
   padding: 4px 6px;
   border-radius: 4px;
@@ -54,6 +70,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 0.875rem;
+  max-height: 100%;
+  overflow: auto;
 }
 .taskSection .tasksList .card {
   padding: 0;
@@ -83,4 +101,11 @@
     left: 0;
     padding: 3rem 1rem 0rem !important;
   }
+}
+[data-sidebar-open=true] .taskSection {
+  left: var(--sidebar-width);
+}
+
+[data-sidebar-open=false] .taskSection {
+  left: var(--sidebar-width);
 }/*# sourceMappingURL=taskSearchResponse.module.css.map */
