--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.css
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.css
@@ -7,7 +7,7 @@
   border-bottom: 1px solid hsl(var(--border));
   height: var(--nav-height);
   background-color: hsl(var(--background));
-  z-index: 1000000;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
