--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.scss
@@ -8,7 +8,7 @@
 
   height: var(--nav-height);
   background-color: hsl(var(--background));
-  z-index: 1000000;
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
