--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/components/taskSearchResponse/css/taskSearchResponse.module.css
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/components/taskSearchResponse/css/taskSearchResponse.module.css
@@ -14,6 +14,22 @@
     --sidebar-width: 0;
   }
 }
+.taskSectionEmpty {
+  position: fixed;
+  width: 100%;
+  top: var(--nav-height);
+  left: var(--sidebar-width);
+  padding: var(--main-padding);
+  right: 0;
+  height: 100px;
+  background-color: hsl(var(--muted)/0.5);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  max-height: 100vh;
+  overflow: hidden;
+  z-index: 100;
+}
+
 .taskSection {
   position: fixed;
   top: var(--nav-height);
@@ -97,15 +113,16 @@
 }
 
 @media screen and (max-width: 768px) {
-  .taskSection {
+  .taskSection,
+  .taskSectionEmpty {
     left: 0;
     padding: 3rem 1rem 0rem !important;
   }
 }
-[data-sidebar-open=true] .taskSection {
+[data-sidebar-open=true] .taskSection .taskSectionEmpty {
   left: var(--sidebar-width);
 }
 
-[data-sidebar-open=false] .taskSection {
+[data-sidebar-open=false] .taskSection .taskSectionEmpty {
   left: var(--sidebar-width);
 }/*# sourceMappingURL=taskSearchResponse.module.css.map */
