--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/css/gridNavbar.scss
@@ -5,6 +5,7 @@
   padding: 0 1.5rem;
   pointer-events: all;
   border-bottom: 1px solid hsl(var(--border));
+  gap: 1rem;
 
   height: var(--nav-height);
   background-color: hsl(var(--background));
