--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/css/search.module.css
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/css/search.module.css
@@ -1,7 +1,8 @@
 .searchWrapper {
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
+  max-width: 300px;
   position: relative;
+  padding: 0 0.5rem;
 }
 .searchWrapper .searchInput {
   padding: 6px 12px 2px 36px !important;
@@ -32,7 +33,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 10px;
+  left: calc(10px + 0.5rem);
   color: hsl(var(--foreground)/0.8);
   transition: color 0.3s ease;
 }
