--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/css/search.module.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/css/search.module.scss
@@ -1,8 +1,10 @@
 .searchWrapper {
-  width: fit-content;
+  width: 100%;
+  max-width: 300px;
   position: relative;
+  padding: 0 0.5rem;
   .searchInput {
-    padding: 6px 12px 2px 36px !important;
+    padding: 6px 12px 2px calc(36px) !important;
     font-size: 1rem !important;
     font-weight: 100 !important;
     line-height: auto !important;
@@ -29,7 +31,7 @@
     position: absolute;
     top: 50%;
     transform: translateY((-50%));
-    left: 10px;
+    left: calc(10px + 0.5rem);
 
     color: hsl(var(--foreground) / 0.8);
     transition: color 0.3s ease;
