--- a/src/components/ui/cards/draggableCard/css/revealCard.css
+++ b/src/components/ui/cards/draggableCard/css/revealCard.css
@@ -27,18 +27,21 @@
   color: hsl(var(--foreground));
 }
 .reveal-card__wrapper {
-  padding: 1.5rem;
+  padding: 0.75rem;
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 .reveal-card__wrapper__header {
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
 }
 .reveal-card__wrapper__header h3 {
   font-weight: 300;
   font-size: 14px;
-  line-height: 1rem;
+  line-height: 1.15;
   -webkit-hyphens: auto;
           hyphens: auto;
   text-wrap: balance;
@@ -49,8 +52,9 @@
   cursor: text;
 }
 .reveal-card__wrapper__header p {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 12px;
+  font-weight: 200;
+  line-height: 1.1;
   color: hsl(var(--muted-foreground));
   -webkit-user-select: text;
      -moz-user-select: text;
