--- a/src/LandingPages/dashboardPage/components/taskboard/css/draggableColumn.module.css
+++ b/src/LandingPages/dashboardPage/components/taskboard/css/draggableColumn.module.css
@@ -3,7 +3,7 @@
   padding: 1.2rem 0.75rem 2rem;
   list-style-type: none;
   background-color: hsl(var(--card));
-  height: 100%;
+  /* height: 100%; */
 
   border: 1px solid hsl(var(--border));
   border-radius: calc(var(--radius) + 2px * 2);
