--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/components/taskSearchResponse/css/taskSearchResponse.module.scss
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/components/taskSearchResponse/css/taskSearchResponse.module.scss
@@ -30,15 +30,24 @@
   width: 100%;
   top: var(--nav-height);
   left: var(--sidebar-width);
-  padding: var(--main-padding);
   right: 0;
-  height: 100px;
+  height: 24px;
   //background-color: hsl(var(--background));
   background-color: hsl(var(--muted) / 0.5);
+  color: hsl(var(--foreground));
   backdrop-filter: blur(10px);
   max-height: 100vh;
   overflow: hidden;
   z-index: 100;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  h2 {
+    font-size: 0.875rem;
+    margin: 0 2rem;
+  }
 }
 
 .taskSection {
