--- a/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
+++ b/src/components/ui/taskviewer/taskviewer/css/taskviewer.module.scss
@@ -8,11 +8,11 @@
 
   gap: 32px;
   position: fixed;
-  top: var(--nav-height);
+  top: calc(var(--nav-height) + 0.5rem);
   padding-top: calc(2rem + 4px);
   right: 0;
   left: var(--sidebar-width);
-  height: calc(100dvh - var(--nav-height));
+  height: calc(100dvh - var(--nav-height) - 1rem);
   padding-left: 2rem;
   overflow: auto;
   transition: transform 0.3s ease-in-out;
@@ -50,6 +50,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
+    max-width: fit-content;
 
     .delete {
       background-color: hsl(var(--destructive));
@@ -86,6 +87,10 @@
     text-overflow: ellipsis;
     height: fit-content;
   }
+}
+
+.taskBackdrop {
+  display: 0;
 }
 
 .statusPriorityDueDateWrapper {
@@ -178,14 +183,39 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .taskViewer {
+    right: 0;
+    left: 50%;
+  }
+  .taskBackdrop {
+    display: 0;
+    background-color: hsl(var(--black) / 0.5);
+    position: fixed;
+    top: var(--nav-height);
+    left: var(--sidebar-width);
+    right: 0;
+    bottom: 0;
+    z-index: 1;
   }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 850px) and (max-width: 1279px) {
   .taskViewer {
+    right: 0;
+    left: 20%;
+  }
+  .taskBackdrop {
+    display: 0;
+    background-color: hsl(var(--black) / 0.5);
+    position: fixed;
+    top: var(--nav-height);
+    left: var(--sidebar-width);
+    right: 0;
+    bottom: 0;
+    z-index: 1;
   }
 }
+
 @media screen and (max-width: 768px) {
   .taskViewer {
     left: 0;
