--- a/src/LandingPages/dashboardPage/components/taskboard/css/taskwrapper.module.css
+++ b/src/LandingPages/dashboardPage/components/taskboard/css/taskwrapper.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.729rem;
+  overflow: visible;
 }
 
 .taskContainer {
@@ -12,6 +13,21 @@
   position: relative;
   height: calc(100dvh - 75px - var(--nav-height) - 15rem);
   overflow: scroll;
+  padding: 0rem;
+
+  scrollbar-width: none;
+}
+
+.taskcontainer::-webkit-scrollbar {
+  display: none;
+}
+.taskContainerColumnLayout {
+  height: calc(100dvh - 75px - var(--nav-height) - 15rem);
+}
+
+.taskContainerRowLayout {
+  height: 100%;
+  padding-bottom: 2rem;
 }
 
 @media screen and (max-width: 768px) {
