--- a/src/LandingPages/settingsPage/components/settingsPageHero/components/preferences/css/preferences.module.css
+++ b/src/LandingPages/settingsPage/components/settingsPageHero/components/preferences/css/preferences.module.css
@@ -1,1 +1,8 @@
-/*# sourceMappingURL=preferences.module.css.map */
+.preferences h3 {
+  margin-bottom: 0.5rem;
+}
+
+.select {
+  padding: 6px 12px;
+  font-size: 1rem;
+}/*# sourceMappingURL=preferences.module.css.map */
