--- a/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/css/search.module.css
+++ b/src/components/grid/gridContainer/gridComponents/gridNavbar/Search/css/search.module.css
@@ -9,8 +9,7 @@
   font-size: 1rem !important;
   font-weight: 100 !important;
   line-height: auto !important;
-  height: -moz-min-content !important;
-  height: min-content !important;
+  height: 38px !important;
   display: flex;
   align-items: center;
   color: hsl(var(--foreground));
@@ -36,6 +35,14 @@
   left: calc(10px + 0.5rem);
   color: hsl(var(--foreground)/0.8);
   transition: color 0.3s ease;
+}
+.searchWrapper .shortcuts {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: calc(10px + 0.5rem);
+  display: flex;
+  gap: 4px;
 }
 
 .searchWrapper:hover .searchInput::-moz-placeholder {
